# GongJu

./: .gitignore  README.md  adb_file_browser.py  adb_installer.py  adb_paths.py  adb_util.py  build.bat  build_icon.py  log_viewer.py  log_viewer_packages.json  main.py  manual_build.bat  manual_build.ps1  prepare_scrcpy.py  requirements.txt  screen_mirror.py  工具软件.spec  运行工具.bat
GongjuCSharp/: GongjuCSharp.sln  README.md  运行CSharp工具.bat
GongjuCSharp/GongjuCSharp/: AdbFileBrowserForm.cs  AdbHelper.cs  GongjuCSharp.csproj  LogViewerForm.cs  MainForm.cs  Program.cs  ScreenMirrorForm.cs
GongjuCpp/: CMakeLists.txt  README.md  build.bat
GongjuCpp/src/: adb_browser.cpp  adb_browser.h  adb_helper.cpp  adb_helper.h  log_viewer.cpp  log_viewer.h  main.cpp  main_window.cpp  main_window.h  screen_mirror.cpp  screen_mirror.h
panels/: __init__.py  adb_shell.py  app_manager.py  base.py  clipboard_history.py  device_info.py  encoding_tool.py  hash_tool.py  json_tool.py  media_capture.py  port_forward.py  timestamp_tool.py  wireless_adb.py
